Hide create vehicles button from users and fix sidebar alignment

--- a/client/src/components/PortalSidebar/PortalSidebar.css
+++ b/client/src/components/PortalSidebar/PortalSidebar.css
@@ -14,7 +14,7 @@
     height: fit-content;
 }
 
-.portal-sidebar > div > header {
+.portal-sidebar > div:first-of-type > header {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,12 +24,12 @@
     user-select: none;
 }
 
-.portal-sidebar > div > div:first-of-type {
+.portal-sidebar > div:first-of-type > div:first-of-type {
     border-top: 2px solid #4c0202;
 }
 
-.portal-sidebar > div > button,
-.portal-sidebar > div > div {
+.portal-sidebar > div:first-of-type > button,
+.portal-sidebar > div:first-of-type > div {
     width: 100%;
     height: 35px;
     margin: 0;
@@ -46,7 +46,7 @@
     -webkit-box-sizing: border-box;
 }
 
-.portal-sidebar > div > div {
+.portal-sidebar > div:first-of-type > div {
     display: flex;
     align-items: center;
     padding-left: 1.5em;
@@ -54,22 +54,29 @@
     background-color: #4c0202;
 }
 
-.portal-sidebar > div > button {
+.portal-sidebar > div:first-of-type > button {
     padding-left: 2.5em;
     background-color: #7b0202;
 }   
 
-.portal-sidebar > div > button.selected {
+.portal-sidebar > div:first-of-type > button.selected {
     background: none;
     background-color: #640202;
 }
 
-.portal-sidebar > div > button:hover {
+.portal-sidebar > div:first-of-type > button:hover {
     color: rgba(255, 255, 255, 0.75);
     background-position: left;
 }
 
-.portal-sidebar > button {
+.portal-sidebar > div:last-of-type {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.portal-sidebar > div:last-of-type > button {
+    width: calc(100% - 2em);
     height: 50px;
     background-color: #4c0202;
     margin: 1em;
@@ -77,6 +84,7 @@
     border-radius: 5px;
     outline: none;
     border: none;
+    text-align: center;
 }
 
 .adminItems {
